--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.2.13",
     "@angular/ssr": "^18.0.3",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
